gitops/applications/base/dns-utils/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${ARGOCD_ENV_external_dns_namespace}
---
