gitops/applications/base/dns-utils/istio-gateway-crs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: proxy-protocol
  namespace: ${ARGOCD_ENV_istio_external_gateway_namespace}
spec:
  configPatches:
    - applyTo: LISTENER_FILTER
      patch:
        operation: INSERT_FIRST
        value:
          name: proxy_protocol
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol"
  workloadSelector:
    labels:
      istio: ${ARGOCD_ENV_istio_external_gateway_name}
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ${ARGOCD_ENV_istio_internal_wildcard_gateway_name}
  namespace: ${ARGOCD_ENV_istio_internal_gateway_namespace}
  annotations:
    external-dns.alpha.kubernetes.io/target: ${ARGOCD_ENV_internal_load_balancer_dns}
spec:
  selector:
    istio: ${ARGOCD_ENV_istio_internal_gateway_name}
  servers:
    - hosts:
        - "*.${ARGOCD_ENV_dns_private_subdomain}"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: ${ARGOCD_ENV_default_internal_ssl_certificate}
        mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ${ARGOCD_ENV_istio_external_wildcard_gateway_name}
  namespace: ${ARGOCD_ENV_istio_external_gateway_namespace}
  annotations:
    external-dns.alpha.kubernetes.io/target: ${ARGOCD_ENV_external_load_balancer_dns}
spec:
  selector:
    istio: ${ARGOCD_ENV_istio_external_gateway_name}
  servers:
    - hosts:
        - "*.${ARGOCD_ENV_dns_public_subdomain}"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: ${ARGOCD_ENV_default_external_ssl_certificate}
        mode: SIMPLE
